wk_taa_taaqa/src/objects/AccountAutomationSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ATA_ExcludeAccountRecordType__c</fullName>
        <description>Exclude Account Record Type in Account Team Automation</description>
        <inlineHelpText>Exclude Account Record Type in Account Team Automation</inlineHelpText>
        <label>ATA_ExcludeAccountRecordType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchJobAdmin__c</fullName>
        <label>BatchJobAdmin</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Custodial_Role__c</fullName>
        <inlineHelpText>Role of Default Account Custodial</inlineHelpText>
        <label>Default Account Custodial Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Custodian__c</fullName>
        <label>Default Account Custodian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_UserId__c</fullName>
        <label>Default Account UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Lead_Custodian__c</fullName>
        <description>In absence of DTN field lead will assign to this user.</description>
        <inlineHelpText>In absence of DTN field lead will assign to this user.</inlineHelpText>
        <label>Default Lead Custodian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludedAccountRecordTypeForUpdate__c</fullName>
        <label>ExcludedAccountRecordTypeForUpdate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralDataSizeInBatchJob__c</fullName>
        <label>GeneralDataSizeInBatchJob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTriggerOff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trigger Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceSourceRole__c</fullName>
        <label>ServiceSourceRole</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminate_Account_Team_Role_Names__c</fullName>
        <description>Collection of role name strings for which if no assignment is found then prevents the account team creation.</description>
        <inlineHelpText>Collection of role name strings for which if no assignment is found then prevents the account team creation.</inlineHelpText>
        <label>Terminate Account Team Role Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccountAutomationSetting</label>
</CustomObject>